--- a/frontend/src/components/SignIn.css
+++ b/frontend/src/components/SignIn.css
@@ -118,6 +118,41 @@
   background: white;
 }
 
+.password-input-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.password-input-wrapper input {
+  padding-right: 50px;
+  width: 100%;
+}
+
+.password-toggle {
+  position: absolute;
+  right: 15px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #64748b;
+  font-size: 20px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: color 0.2s ease;
+  z-index: 1;
+}
+
+.password-toggle:hover {
+  color: #00A9B7;
+}
+
+.password-toggle:focus {
+  outline: none;
+}
+
 .form-group input:focus,
 .form-group select:focus {
   outline: none;
